# rust-function_name

./: .gitignore  Cargo.toml  README.md  cargo_publish.sh  change_version.sh  flake.nix  rustfmt.toml  shell.nix
.direnv/: flake-profile-1-link
.github/workflows/: CI.yml  future-proof.yml
examples/: readme-basic.rs  readme-function_path.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: lib.rs
tests/: double_use.rs  raw_idents.rs
