[package]
name = "function_name"
version = "0.2.2"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "macro that expands to the name of the annotated function"
documentation = "https://docs.rs/function_name"
homepage = "https://crates.io/crates/function_name"
repository = "https://github.com/danielhenrymantilla/rust-function_name"
keywords = ["macro", "proc-macro", "proc-macro-attribute", "name", "function_name"]

readme = "README.md"
license = "MIT"

[dependencies.function_name-proc-macro]
version = "0.2.2"  # Keep in sync
path = "proc-macro"

[dev-dependencies]
function_name.path = "."
function_name.features = ["dev"]

[features]
default = []

docs-rs = ["better-docs", "dev"]

dev = ["function_name-proc-macro/test"]
better-docs = []

[workspace]
members = ["proc-macro"]

[package.metadata.docs.rs]
features = ["docs-rs"]
