[lib]
proc-macro = true

[package]
name = "function_name-proc-macro"
version = "0.3.0-rc1"  # Keep in sync
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "macro that expands to the name of the annotated function"
documentation = "https://docs.rs/function_name"
homepage = "https://crates.io/crates/function_name"
repository = "https://github.com/danielhenrymantilla/rust-function_name"
keywords = ["macro", "proc-macro", "proc-macro-attribute", "name", "function_name"]

license = "MIT"
